--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         # We provide a dummy token because the command requires authentication, but for a simple
         # build verification, we don't need access to a real Vercel project.
         # This is more reliable than creating the file manually.
-        run: vercel pull --yes --environment=preview --token=${{ secrets.DUMMY_TOKEN || 'dummy-token' }}
+        run: vercel pull --yes --environment=preview
 
       - name: "Run Vercel Build Command"
         # This command simulates a production build. It will install dependencies
